Modify: Tailord pr section alignment fixes

--- a/src/components/TailorPR/TailorPR.css
+++ b/src/components/TailorPR/TailorPR.css
@@ -1,6 +1,6 @@
 .card { 
     width: 550px;
-    perspective: 1000px;
+    perspective: 800px;
 }
 .card__content {
     transform-style: preserve-3d;
